Make ChannelFactory dynamisch und füge mache Userepository und Gui JEHAAAAAAA wuhuuu widr viel gschafft, und glernt. Als nöchsts:
ASYNCHRONITÄT JEHAAAA :D:D

--- a/WpfApplication1/Properties/Resources.resx
+++ b/WpfApplication1/Properties/Resources.resx
@@ -126,4 +126,7 @@
   <data name="StringStammdaten" xml:space="preserve">
     <value>"Stammdaten"</value>
   </data>
+  <data name="StringUsers" xml:space="preserve">
+    <value>"Users"</value>
+  </data>
 </root>
