add offer, offer repo, interface offer, interface offer repo, folders added

--- a/Trunk/WpfApplication1/Properties/Resources.resx
+++ b/Trunk/WpfApplication1/Properties/Resources.resx
@@ -129,4 +129,7 @@
   <data name="StringUsers" xml:space="preserve">
     <value>"Users"</value>
   </data>
+  <data name="StringSupplier" xml:space="preserve">
+    <value>"Supplier"</value>
+  </data>
 </root>
